test/classes/deitz/types/type_to_value_error_intent.good
type_to_value_error_intent.chpl:7: error: illegal assignment of type to value
