test/classes/deitz/types/type_to_value_error_intent.chpl
class C {
  var x: int;
}

var c: borrowed C?;

forall 1..10 with (var c = C()) {
}

writeln(c);
